# render_engine_fontawesome

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  static.yml  test.yml
docs/: app.py
docs/output/: index.html
docs/templates/: _footer.html  index.html
render_engine_fontawesome/: __init__.py  fontawesome.py
tests/: test_fontawesome.py
