[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-fontawesome"
dynamic = ["version"]
description = "add the fontawesome iconset"
readme = "README.md"

dependencies = [
    'jinja2',
    "render-engine>=2023.11.1a1"
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    ]


[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_fontawesome"
repository = "https://github.com/kjaymiller/render_engine_fontawesome"
documentation = "https://github.io/kjaymiller/render_engine_fontawesome"
                

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py312"
line-length = 120
ignore-init-module-imports = true
